--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -31,7 +32,8 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="Buscar"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:padding="10dp" />
 
                 <Button
                     android:id="@+id/btn_search"
