--- a/app/src/main/res/layout/vehicle_adapter.xml
+++ b/app/src/main/res/layout/vehicle_adapter.xml
@@ -9,6 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textSize="28dp"
         android:text="nombre"
         android:id="@+id/txtLicense"/>
     
